// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`multi-width snapshot sweep (plan A16) review screen @ 80x30 1`] = `
"                                                                                
  LabelLens  tiny.jsonl  Pending  1 / 10                                        
                                                                                
  Pending ─────────────────────────────────────────────────────────────  1 / 10 
                                                                                
                                                                                
                                                                                
 ╭────────────────────────────────────────────────────────────────────────────╮ 
 │ Lunch at Zomato Bangalore                                                  │ 
 ╰────────────────────────────────────────────────────────────────────────────╯ 
  █ Uber ride to airport                                                        
  ▆ Amazon order #12345                                                         
                                                                                
  prediction ────────────────────────────────────────────────────────────────── 
                                                                                
  label      ◇ food                                                             
  confidence ████████░  92%                                                     
  source     [llm:gpt-4]                                                        
                                                                                
  labels ────────────────────────────────────────────────────────────────────── 
                                                                                
  ◆ [1]  food  92%      [2]  travel      [3]  other                             
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  [a] accept ┊[r] relabel ┊[i] ask ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊… 
                                                                                
"
`;

exports[`multi-width snapshot sweep (plan A16) stats overlay @ 80x30 1`] = `
"                                                                                
  LabelLens  tiny.jsonl  Pending  1 / 10                                        
                                                                                
  Pending ─╭──────────────────────────────────────────────────────╮────  1 / 10 
           │                                                      │             
           │  ══ Stats ══════════════════════════════════════════ │             
           │                                                      │             
 ╭─────────│  Progress: Total 10  Reviewed 0  Pending 10  Skipped │───────────╮ 
 │ Lunch at│  Decisions: Accepted 0  Relabeled 0  Rejected 0  Ski │           │ 
 ╰─────────│                                                      │───────────╯ 
  █ Uber ri│  Imported issues ──────────────────────────────────  │             
  ▆ Amazon │ >   label_issue                  1 record         →  │             
           │  Suggested next queue ─────────────────────────────  │             
  predictio│     low-confidence   (score 5.00)                 →  │──────────── 
           │                                                      │             
  label    │                                                      │             
  confidenc│                                                      │             
  source   │                                                      │             
           │                                                      │             
  labels ──│                                                      │──────────── 
           │                                                      │             
  ◆ [1]  fo│                                                      │             
           │  [j/k] navigate · [enter] drill · [esc] close        │             
           │                                                      │             
           ╰──────────────────────────────────────────────────────╯             
                                                                                
                                                                                
                                                                                
  [a] accept ┊[r] relabel ┊[i] ask ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊… 
                                                                                
"
`;

exports[`multi-width snapshot sweep (plan A16) splash screen @ 80x30 1`] = `
"                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
               terminal-first review for noisy text training data               
                                                                                
               No labellens.config.json found in this directory.                
                                                                                
  Usage                                                                         
                                                                                
  labellens init <file.jsonl>       initialize a config and database in the     
                                    current directory                           
  labellens                         launch review from a configured labellens   
                                    directory                                   
  labellens export [format]         export reviewed records to jsonl, stats, or 
                                    labelstudio                                 
  labellens migrate --rename ...    rename labels across config and stored data 
  labellens --version               print the installed version                 
  press any key to exit                                                         
"
`;

exports[`multi-width snapshot sweep (plan A16) review screen @ 120x30 1`] = `
"                                                                                                                        
  Pending ────────────────────────────────────────────────────────────────  1 / 10                                      
                                                                                                                        
                                                                                                                        
                                                                                                                        
 ╭───────────────────────────────────────────────────────────────────────────────╮                                      
 │ Lunch at Zomato Bangalore                                                     │                                      
 ╰───────────────────────────────────────────────────────────────────────────────╯                                      
  █ Uber ride to airport                                                                                                
  ▆ Amazon order #12345                                                                                                 
                                                                                                                        
  prediction ─────────────────────────────────────────────────────────────────────                                      
                                                                                                                        
  label      ◇ food                                                                                                     
  confidence ████████░  92%                                                         pending                             
  source     [llm:gpt-4]                                                            1 / 10                              
                                                                                    test/fixtures/tiny.jsonl            
  labels ─────────────────────────────────────────────────────────────────────────                                      
                                                                                    Counters ─────────────────────────  
  ◆ [1]  food  92%      [2]  travel      [3]  other                                                                     
                                                                                    reviewed                         0  
                                                                                    skipped                          0  
                                                                                    marked                           0  
                                                                                                                        
                                                                                    overall 0/10 [░░░░░░░░░░]   0%      
                                                                                    Signals ──────────────────────────  
                                                                                                                        
                                                                                    ●  label_issue                   1  
  [a] accept ┊[r] relabel ┊[i] ask ┊[x] reject ┊[s] skip ┊[n] note    [gd] doc ┊[Q] queues [/] ┊[:] palette ┊[t] stats  
                                                                                                                        
"
`;

exports[`multi-width snapshot sweep (plan A16) stats overlay @ 120x30 1`] = `
"                                                                                                                        
  Pending ────────────────────────────────────────────────────────────────  1 / 10                                      
                                                                                                                        
                   ╭──────────────────────────────────────────────────────────────────────────────╮                     
                   │                                                                              │                     
 ╭─────────────────│  ══ Stats ══════════════════════════════════════════════════════════════════ │                     
 │ Lunch at Zomato │                                                                              │                     
 ╰─────────────────│  Progress: Total 10  Reviewed 0  Pending 10  Skipped 0                       │                     
  █ Uber ride to ai│  Decisions: Accepted 0  Relabeled 0  Rejected 0  Skipped 0                   │                     
  ▆ Amazon order #1│                                                                              │                     
                   │  Imported issues ──────────────────────────────────────────────────────────  │                     
  prediction ──────│ >   label_issue                  1 record                                 →  │                     
                   │  Suggested next queue ─────────────────────────────────────────────────────  │                     
  label      ◇ food│     low-confidence   (score 5.00)                                         →  │                     
  confidence ██████│                                                                              │                     
  source     [llm:g│                                                                              │                     
                   │                                                                              │iny.jsonl            
  labels ──────────│                                                                              │                     
                   │                                                                              │───────────────────  
  ◆ [1]  food  92% │                                                                              │                     
                   │                                                                              │                  0  
                   │                                                                              │                  0  
                   │  [j/k] navigate · [enter] drill · [esc] close                                │                  0  
                   │                                                                              │                     
                   ╰──────────────────────────────────────────────────────────────────────────────╯░░░░░░░░░]   0%      
                                                                                    Signals ──────────────────────────  
                                                                                                                        
                                                                                    ●  label_issue                   1  
  [a] accept ┊[r] relabel ┊[i] ask ┊[x] reject ┊[s] skip ┊[n] note    [gd] doc ┊[Q] queues [/] ┊[:] palette ┊[t] stats  
                                                                                                                        
"
`;

exports[`multi-width snapshot sweep (plan A16) splash screen @ 120x30 1`] = `
"                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                   terminal-first review for noisy text training data                                   
                                                                                                                        
                                   No labellens.config.json found in this directory.                                    
                                                                                                                        
  Usage                                                                                                                 
                                                                                                                        
  labellens init <file.jsonl>       initialize a config and database in the current directory                           
  labellens                         launch review from a configured labellens directory                                 
  labellens export [format]         export reviewed records to jsonl, stats, or labelstudio                             
  labellens migrate --rename ...    rename labels across config and stored data                                         
  labellens --version               print the installed version                                                         
                                                                                                                        
  press any key to exit                                                                                                 
"
`;

exports[`multi-width snapshot sweep (plan A16) review screen @ 160x30 1`] = `
"                                                                                                                                                                
  Pending ────────────────────────────────────────────────────────────────────────────────────────────  1 / 10                                                  
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
 ╭───────────────────────────────────────────────────────────────────────────────────────────────────────────╮                                                  
 │ Lunch at Zomato Bangalore                                                                                 │                                                  
 ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────╯                                                  
  █ Uber ride to airport                                                                                                                                        
  ▆ Amazon order #12345                                                                                                                                         
                                                                                                                                                                
  prediction ─────────────────────────────────────────────────────────────────────────────────────────────────                                                  
                                                                                                                                                                
  label      ◇ food                                                                                                                                             
  confidence ████████░  92%                                                                                     pending                                         
  source     [llm:gpt-4]                                                                                        1 / 10                                          
                                                                                                                test/fixtures/tiny.jsonl                        
  labels ─────────────────────────────────────────────────────────────────────────────────────────────────────                                                  
                                                                                                                Counters ─────────────────────────────────────  
  ◆ [1]  food  92%      [2]  travel      [3]  other                                                                                                             
                                                                                                                reviewed                                     0  
                                                                                                                skipped                                      0  
                                                                                                                marked                                       0  
                                                                                                                                                                
                                                                                                                overall 0/10 [░░░░░░░░░░]   0%                  
                                                                                                                Signals ──────────────────────────────────────  
                                                                                                                                                                
                                                                                                                ●  label_issue                               1  
  [a] accept ┊[r] relabel ┊[i] ask ┊[x] reject ┊[s] skip ┊[n] note                                            [gd] doc ┊[Q] queues [/] ┊[:] palette ┊[t] stats  
                                                                                                                                                                
"
`;

exports[`multi-width snapshot sweep (plan A16) stats overlay @ 160x30 1`] = `
"                                                                                                                                                                
  Pending ────────────────────────────────────────────────────────────────────────────────────────────  1 / 10                                                  
                                                                                                                                                                
                                       ╭──────────────────────────────────────────────────────────────────────────────╮                                         
                                       │                                                                              │                                         
 ╭─────────────────────────────────────│  ══ Stats ══════════════════════════════════════════════════════════════════ │                                         
 │ Lunch at Zomato Bangalore           │                                                                              │                                         
 ╰─────────────────────────────────────│  Progress: Total 10  Reviewed 0  Pending 10  Skipped 0                       │                                         
  █ Uber ride to airport               │  Decisions: Accepted 0  Relabeled 0  Rejected 0  Skipped 0                   │                                         
  ▆ Amazon order #12345                │                                                                              │                                         
                                       │  Imported issues ──────────────────────────────────────────────────────────  │                                         
  prediction ──────────────────────────│ >   label_issue                  1 record                                 →  │                                         
                                       │  Suggested next queue ─────────────────────────────────────────────────────  │                                         
  label      ◇ food                    │     low-confidence   (score 5.00)                                         →  │                                         
  confidence ████████░  92%            │                                                                              │                                         
  source     [llm:gpt-4]               │                                                                              │                                         
                                       │                                                                              │xtures/tiny.jsonl                        
  labels ──────────────────────────────│                                                                              │                                         
                                       │                                                                              │s ─────────────────────────────────────  
  ◆ [1]  food  92%      [2]  travel    │                                                                              │                                         
                                       │                                                                              │d                                     0  
                                       │                                                                              │                                      0  
                                       │  [j/k] navigate · [enter] drill · [esc] close                                │                                      0  
                                       │                                                                              │                                         
                                       ╰──────────────────────────────────────────────────────────────────────────────╯ 0/10 [░░░░░░░░░░]   0%                  
                                                                                                                Signals ──────────────────────────────────────  
                                                                                                                                                                
                                                                                                                ●  label_issue                               1  
  [a] accept ┊[r] relabel ┊[i] ask ┊[x] reject ┊[s] skip ┊[n] note                                            [gd] doc ┊[Q] queues [/] ┊[:] palette ┊[t] stats  
                                                                                                                                                                
"
`;

exports[`multi-width snapshot sweep (plan A16) splash screen @ 160x30 1`] = `
"                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                       terminal-first review for noisy text training data                                                       
                                                                                                                                                                
                                                       No labellens.config.json found in this directory.                                                        
                                                                                                                                                                
  Usage                                                                                                                                                         
                                                                                                                                                                
  labellens init <file.jsonl>       initialize a config and database in the current directory                                                                   
  labellens                         launch review from a configured labellens directory                                                                         
  labellens export [format]         export reviewed records to jsonl, stats, or labelstudio                                                                     
  labellens migrate --rename ...    rename labels across config and stored data                                                                                 
  labellens --version               print the installed version                                                                                                 
                                                                                                                                                                
  press any key to exit                                                                                                                                         
"
`;
